# redra

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  build.rs  pyproject.toml
.ai_context/: rule.toml
.ai_context/rules/: normal_language.toml  preference.toml  tool_chain.toml
assets/: .gitignore
assets/init/: default_scene.toml
assets/materials/: default.toml  materials.toml
assets/materials/axes/: x_axis.toml  y_axis.toml  z_axis.toml
assets/materials/base/: black.toml  black_transparent.toml  blue.toml  blue_transparent.toml  bright_blue.toml  bright_blue_transparent.toml  bright_cyan.toml  bright_cyan_transparent.toml  bright_green.toml  bright_green_transparent.toml  bright_orange.toml  bright_orange_transparent.toml  bright_pink.toml  bright_pink_transparent.toml  bright_purple.toml  bright_purple_transparent.toml  bright_red.toml  bright_red_transparent.toml  bright_yellow.toml  bright_yellow_transparent.toml  brown.toml  brown_transparent.toml  cyan.toml  cyan_transparent.toml  dark_blue.toml  dark_blue_transparent.toml  dark_brown.toml  dark_brown_transparent.toml  dark_gray.toml  dark_gray_transparent.toml  dark_green.toml  dark_green_transparent.toml  dark_purple.toml  dark_purple_transparent.toml  dark_red.toml  dark_red_transparent.toml  gray.toml  gray_transparent.toml  green.toml  green_transparent.toml  (+18 more)
assets/materials/data/: cluster_01.toml  cluster_02.toml  cluster_03.toml  cluster_04.toml  cluster_05.toml  cluster_06.toml  cluster_07.toml  cluster_08.toml  cluster_09.toml  cluster_10.toml  cluster_11.toml  cluster_12.toml
assets/materials/effects/: glass.toml  glow.toml  matte.toml  metal.toml  plastic.toml  wood.toml
assets/materials/mesh_types/: cone.toml  cube.toml  cylinder.toml  line.toml  point.toml  sphere.toml
assets/materials/semantic/: alert.toml  bounding_box.toml  cluster_bg.toml  ground.toml  noise.toml  obstacle.toml  point_cloud.toml  (+4 more)
crates/bevy_wheel_menu/: Cargo.toml
crates/bevy_wheel_menu/examples/: fps.rs  gamepad.rs
crates/bevy_wheel_menu/src/: lib.rs  mesh.rs
crates/expto/: .gitignore  Cargo.toml  build.rs
crates/expto/src/: config.rs  ip.rs  lib.rs  prelude.rs  rdmp.rs
crates/expto/src/rdmp/: auto.rs  decoding.rs  encoding.rs  proto.rs
crates/expto/src/rdmp/auto/: mesh.rs  object.rs  shape.rs  stamper.rs  unit.rs
crates/inpto/: Cargo.toml
crates/parser/: Cargo.toml  README.md
crates/redra_calib/: Cargo.toml
crates/redra_client/: Cargo.toml  build.rs
crates/redra_client/examples/: README.md  README_POINT_CLOUD_TEST.md  basic_usage.rs  builder_test.rs  command_client.rs  data_management_demo.rs  label_test.rs  point_cloud_grouped.rs  point_cloud_recording_test.rs  redra_test.rs  simple_test.rs  writer_test.rs
crates/redra_client/src/: client.rs  defaults.rs  lib.rs  proto.rs
crates/redra_client/src/client/: builder.rs  geometry.rs  id.rs  link.rs  receiver.rs  send.rs  sender.rs  shape.rs  sql_writer.rs  writer.rs
crates/redra_client/src/proto/: command.rs  declare.rs  designation.rs  formats.rs  resource.rs  shape.rs  target.rs  transform.rs
crates/redra_data_flow/: Cargo.toml
crates/redra_data_flow/src/: lib.rs
crates/redra_geo/: Cargo.toml
crates/redra_io/: Cargo.toml
crates/redra_net/: Cargo.toml
crates/redra_net/src/: forwarder.rs  lib.rs  linker.rs  listener.rs  work_share.rs
crates/redra_parser/: Cargo.toml
crates/redra_proto/: Cargo.toml
crates/redra_storage/: Cargo.toml
crates/redra_storage/src/: lib.rs  storage.rs
crates/smooth-bevy-cameras/: Cargo.toml
crates/utils/: Cargo.toml
dev_note/: async_socket.md  font_setup.md
docs/: PROTOCOL_DESIGN.md  bench_color_requirements.md  storage.md
examples/: send_point_example.rs
packs/: README.md  pyproject.toml
packs/rdsend/: client.py  example.py  example_client.py
prompt/: guide.md  rule.yaml  self_rule.md
prompt/rules/: git_commit.yaml  normal_language.yaml  preference.yaml  tool_chain.yaml  ui_design.yaml
proto/: cmd.proto  command.proto  conception.proto  declare.proto  designation.proto  formats.proto  header.proto  object.proto  point_cloud.proto  rd.proto  rdr.proto  rsrc.proto  shape.proto  stamp.proto  transform.proto  unit.proto
proto/command/: conception.proto  core.proto  designation.proto  transform.proto
proto/object/: mesh.proto  transform.proto
proto/resource/: core.proto  formats.proto  shape.proto
script/: build_all.py  build_packs.py  compile_proto.py  gen_transparent_materials.py  package.ps1  package.sh  package_client.py  proto_compile.py  proto_test.py  test_cube.py  test_meshes.py
script/client/: __init__.py  client_sender.py  example.py
src/: assets.rs  client.rs  control.rs  data.rs  geometry.rs  graph.rs  lib.rs  main.rs  manager.rs  module.rs  net.rs  parser.rs  proto.rs  render.rs  renderer.rs  ui.rs  utils.rs
src/assets/: fonts.rs  materials.rs
src/channel/: core.rs
src/client/: sender.rs
src/data/: frame.rs  protocol.rs  tag.rs
src/geometry/: base.rs  material.rs  pose.rs  shape.rs
src/graph/: action.rs  axis.rs  clear.rs  communicate.rs  component.rs  data_processing.rs  frame_rate.rs  init.rs  interaction.rs  material.rs  materials.rs  parser.rs  rendering.rs  setup.rs  spawn.rs  ui.rs  update.rs  wheel_menu.rs
src/manager/: coding.rs  data_flow.rs  data_processing.rs  font.rs  interaction.rs  materials.rs  parser_manager.rs  record.rs
src/module/: alias.rs  camera.rs  parser.rs  resource.rs  task.rs
src/net/: core.rs  forwarder.rs  linker.rs  listener.rs  server.rs  work_share.rs
src/parser/: interface.rs  proto.rs  spawn.rs
src/render/: conversion.rs  coord_system.rs  frame.rs  frame_renderer.rs  framerate.rs  helpers.rs  init.rs  interaction.rs  scene.rs
src/renderer/: frame_renderer.rs  init.rs  interaction.rs  scene_initializer.rs  ui.rs
src/ui/: axis_adjust.rs  file_manager.rs  label.rs  notifications.rs  playback_control.rs  shell.rs  theme.rs  wheel_menu.rs
src/utils/: proto_decode.rs
tests/: communication_test.rs  float_label_test.rs
tests/run/: run_tests.py  test_controller.py  test_manager.py
(+123 files in other folders)
