[package]
name = "redra"
version = "0.2.0"
edition = "2024"

[dependencies]
smooth-bevy-cameras = { path = "crates/smooth-bevy-cameras" }
bevy_wheel_menu = { path = "crates/bevy_wheel_menu" }
pyri_tooltip = { path = "crates/pyri_tooltip" }
redra_client = { path = "crates/redra_client", optional = true }
redra_storage = { path = "crates/redra_storage" }
redra_proto = { path = "crates/redra_proto" }
redra_parser = { path = "crates/redra_parser" }
redra_data_flow = { path = "crates/redra_data_flow" }
redra_net = { path = "crates/redra_net" }
utils ={ path = "crates/utils" }

bevy = { version = "0.18", optional = true }
log = "0.4"
nalgebra = "0.34"
prost = "0.14"
ringbuf = "0.4"
tokio = { version = "1.51", features = ["full"] }
approx = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }
bevy_egui = { version = "0.39", optional = true }
spin_sleep = "1.3"
dirs = "6.0"

[workspace]
members = [
    "crates/pyri_tooltip",
    "crates/bevy_wheel_menu",
    "crates/smooth-bevy-cameras",
    "crates/redra_client",
    "crates/redra_storage",
    "crates/redra_proto",
    "crates/redra_parser",
    "crates/redra_data_flow",
    "crates/redra_net",
]


[build-dependencies]
prost-build = "0.14"

[features]
default = ["graph"]
client = ["redra_client"]
graph = ["dep:bevy", "dep:bevy_egui", "redra_parser/graph", "redra_data_flow/graph"]