[package]
name = "redra"
version = "0.3.0"
edition = "2024"

[dependencies]
smooth-bevy-cameras = { path = "crates/smooth-bevy-cameras" }
bevy_wheel_menu = { path = "crates/bevy_wheel_menu" }
redra_client = { path = "crates/redra_client", optional = true }
expto = { path = "crates/expto" }
redra_net = { path = "crates/redra_net" }
utils ={ path = "crates/utils" }

bevy = { version = "0.18", optional = true, features = ["bevy_window", "bevy_picking"] }
log = "0.4"
nalgebra = "0.34"
prost = "0.14"
ringbuf = "0.4"
tokio = { version = "1.52", features = ["full"] }
approx = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bevy_egui = { version = "0.39", optional = true }
spin_sleep = "1.3"
dirs = "6.0"
bevy_materialize = { version = "0.10", features = ["toml"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = { version = "0.17.2", optional = true }
image = { version = "0.25", optional = true }

[workspace]
members = [
    "crates/bevy_wheel_menu",
    "crates/smooth-bevy-cameras",
    "crates/redra_client",
    "crates/expto",
    "crates/redra_net", 
    "crates/utils",
]

[features]
default = ["graph"]
client = ["redra_client"]
graph = ["dep:bevy", "dep:bevy_egui", "dep:serde", "dep:rfd", "dep:image"]
